# audio-tool-box

./: AudioToolBox.py  README.md  audio_tool_box.py  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
examples/: batch_processing.py  filter_signal.py  fix_dynamics.py  quickstart.py  stereo_file.py
src/audio_tool_box/: __init__.py  audio_data.py  channel.py  oscillators.py  plots.py  util.py
src/audio_tool_box/constants/: math.py
src/audio_tool_box/processing/: dynamics.py  filters.py  gain.py  noise_reduction.py
src/audio_toolset/: channel.py
src/audio_toolset/cli/: decorators.py  helpers.py  main.py
tests/: conftest.py  test_audio_data.py  test_channel.py  test_cli.py  test_converters.py  test_dynamic_processing.py  test_filters.py  test_gain_processing.py  test_noise_reduction.py
