[project]
name = "audio-tool-box"
version = "0.1.0"
description = "Tools for processing audio signals"
readme = "README.md"
authors = [
    { name = "moshe-stanylov", email = "maxoshe@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "cffi==1.16.0",
    "numpy==2.0.1",
    "packaging==24.1",
    "plotly==5.23.0",
    "pycparser==2.22",
    "scipy==1.13.1",
    "soundfile==0.12.1",
    "tenacity==8.5.0",
]

[project.scripts]
audio-tool-box = "audio_tool_box:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
