[project]
name = "audio-tool-box"
version = "0.1.0"
description = "Tools for processing audio signals"
readme = "README.md"
authors = [
    { name = "moshe-stanylov", email = "maxoshe@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy==2.0.1",
    "plotly==5.23.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "scipy==1.13.1",
    "soundfile==0.12.1",
]

[project.scripts]
audio-tool-box = "audio_tool_box:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
package-dir = {"" = "src"}
